--- a/package.json
+++ b/package.json
@@ -28,17 +28,24 @@
   "homepage": "https://github.com/fluffynuts/node-nuget-client#readme",
   "devDependencies": {
     "@types/bent": "^7.0.2",
-    "@types/jest": "^25.2.1",
+    "@types/jest": "^25.2.3",
     "@types/node": "^13.13.4",
+    "@types/rimraf": "^3.0.0",
+    "@types/unzipper": "^0.10.3",
     "cross-env": "^7.0.2",
-    "expect-more-jest": "^4.0.2",
-    "jest": "^26.0.0",
+    "expect-even-more-jest": "^1.3.0",
+    "filesystem-sandbox": "^1.11.0",
+    "jest": "^26.0.1",
     "npm-run-all": "^4.1.5",
-    "ts-jest": "^25.4.0",
+    "ts-jest": "^26.1.0",
+    "ts-node": "^8.10.2",
     "typescript": "^3.8.3",
     "zarro": "^1.29.1"
   },
   "dependencies": {
-    "bent": "^7.3.0"
+    "bent": "^7.3.0",
+    "rimraf": "^3.0.2",
+    "unzipper": "^0.10.11",
+    "yargs": "^15.3.1"
   }
 }
