--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "@types/jest": "^25.2.3",
     "@types/node": "^13.13.4",
     "@types/rimraf": "^3.0.0",
-    "@types/unzipper": "^0.10.3",
+    "@types/unzipper": "^0.10.9",
     "expect-even-more-jest": "^1.3.0",
-    "filesystem-sandbox": "^1.11.0",
+    "filesystem-sandbox": "^1.24.0",
     "jest": "^26.0.1",
     "npm-run-all": "^4.1.5",
     "ts-jest": "^26.1.0",
@@ -49,7 +49,8 @@
     "bent": "^7.3.0",
     "chalk": "^4.1.0",
     "rimraf": "^3.0.2",
-    "unzipper": "^0.10.11",
+    "unzipper": "^0.10.14",
+    "yafs": "^1.36.0",
     "yargs": "^15.3.1"
   }
 }
