--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^13.13.4",
     "@types/rimraf": "^3.0.0",
     "@types/unzipper": "^0.10.9",
+    "@types/xml2json": "^0.11.6",
     "expect-even-more-jest": "^1.3.0",
     "filesystem-sandbox": "^1.24.0",
     "jest": "^26.0.1",
@@ -43,13 +44,14 @@
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "typescript": "^3.8.3",
-    "zarro": "^1.68.0"
+    "zarro": "^1.152.0"
   },
   "dependencies": {
     "bent": "^7.3.0",
     "chalk": "^4.1.0",
     "rimraf": "^3.0.2",
     "unzipper": "^0.10.14",
+    "xml2json": "^0.12.0",
     "yafs": "^1.36.0",
     "yargs": "^15.3.1"
   }
