--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/node": "^13.13.4",
     "@types/rimraf": "^3.0.0",
     "@types/unzipper": "^0.10.9",
-    "@types/xml2json": "^0.11.6",
+    "@types/xmldom": "^0.1.34",
     "expect-even-more-jest": "^1.3.0",
     "filesystem-sandbox": "^1.24.0",
     "jest": "^26.0.1",
@@ -44,6 +44,7 @@
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "typescript": "^3.8.3",
+    "xmldom": "^0.6.0",
     "zarro": "^1.152.0"
   },
   "dependencies": {
@@ -51,7 +52,6 @@
     "chalk": "^4.1.0",
     "rimraf": "^3.0.2",
     "unzipper": "^0.10.14",
-    "xml2json": "^0.12.0",
     "yafs": "^1.36.0",
     "yargs": "^15.3.1"
   }
