--- a/.github/workflows/run-all-tests.yml
+++ b/.github/workflows/run-all-tests.yml
@@ -7,8 +7,40 @@ on:
     branches: [ master ]
 
 jobs:
-  main:
+  linux:
     runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Setup NodeJS
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+
+    - name: Test
+      run: |
+        npm i
+        npm test
+
+  osx:
+    runs-on: macos-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Setup NodeJS
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+
+    - name: Test
+      run: |
+        npm i
+        npm test
+
+  osx:
+    runs-on: windows-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v4
