--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "typescript": "^5.3.3",
-    "xmldom": "^0.6.0",
     "zarro": "^1.152.0"
   },
   "dependencies": {
@@ -53,6 +52,7 @@
     "rimraf": "^3.0.2",
     "unzipper": "^0.10.14",
     "yafs": "^1.36.0",
-    "yargs": "^15.3.1"
+    "yargs": "^15.3.1",
+    "xmldom": "^0.6.0"
   }
 }
