--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "@types/node": "^13.13.4",
     "@types/rimraf": "^3.0.0",
     "@types/unzipper": "^0.10.9",
-    "@types/xmldom": "^0.1.34",
     "expect-even-more-jest": "^1.3.0",
     "filesystem-sandbox": "^1.24.0",
     "npm-run-all": "^4.1.5",
@@ -47,12 +46,12 @@
     "zarro": "^1.152.0"
   },
   "dependencies": {
+    "@xmldom/xmldom": "^0.8.10",
     "bent": "^7.3.0",
     "chalk": "^4.1.0",
     "rimraf": "^3.0.2",
     "unzipper": "^0.10.14",
     "yafs": "^1.36.0",
-    "yargs": "^15.3.1",
-    "xmldom": "^0.6.0"
+    "yargs": "^15.3.1"
   }
 }
