--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@types/jest": "^29.5.11",
     "@types/node": "^13.13.4",
     "@types/rimraf": "^3.0.0",
-    "@types/unzipper": "^0.10.9",
     "expect-even-more-jest": "^1.3.0",
     "filesystem-sandbox": "^1.24.0",
     "npm-run-all": "^4.1.5",
@@ -49,8 +48,8 @@
     "@xmldom/xmldom": "^0.8.10",
     "bent": "^7.3.0",
     "chalk": "^4.1.0",
+    "jszip": "^3.10.1",
     "rimraf": "^3.0.2",
-    "unzipper": "^0.10.14",
     "yafs": "^1.36.0",
     "yargs": "^15.3.1"
   }
